[tool.poetry]
name = "intake-dal"
version = "0.1.6"
description = "Intake single YAML hierarchical catalog."
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7"
]
authors = ["Zillow AI Platform"]
readme = "README.rst"

[tool.poetry.plugins]
[tool.poetry.plugins."intake.drivers"]
dal = "intake_dal.dal_source:DalSource"
dal_cat = "intake_dal.dal_catalog:DalCatalog"
dal-online = "intake_dal.dal_online:DalOnlineSource"
in-memory-kvs = "intake_dal.in_memory_kv:InMemoryKVSource"

[tool.poetry.dependencies]
python = ">=3.6"
deepmerge = "0.1.0"
intake = "0.5.4"
intake-nested-yaml-catalog = "0.1.0"
pandavro = "^1.5.1"
pyarrow = "^0.15.1"
pyyaml = "5.1.2"
vcver = ">=0.2.10"
toolz = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2.2"
flake8 = "^3.7"
mypy = "^0.740.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"
seed-isort-config = "^1.9"
pytest-cov = "^2.8"
pre-commit = "^1.20"
hypothesis = "^4.44"
intake-parquet = "^0.2.3"

[tool.poetry.extras]
doc = ["sphinx", "sphinx_rtd_theme"]

[tool.isort]
known_first_party = 'intake_dal'
known_third_party = ["intake", "intake_nested_yaml_catalog", "numpy", "orbital_core", "pandas", "pandavro", "pkg_resources", "requests", "setuptools", "sphinx_rtd_theme", "uranium", "yaml"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.black]
line-length = 110
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
